[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/MetaObjects/Bumper.gd" type="Script" id=1]
[ext_resource path="res://Materials/SpatialMaterials/BrightRed.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Objects/HintArrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objects/TextBumper.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CapsuleShape" id=3]

[node name="Bumper" type="Spatial"]

[node name="TextBumper" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.253912, 0.654264, 0 )

[node name="BumperBody" type="Area" parent="."]
transform = Transform( 0.00532627, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="BumperBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="BumperBody"]
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( -3.25841e-08, -0.2, 0, 0.2, -3.25841e-08, 0, 0, 0, 0.2, 0, 0.400572, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 3.38813e-21, 2.84217e-14, 2.84217e-14, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="HintArrow" parent="Area" instance=ExtResource( 3 )]
[connection signal="body_entered" from="BumperBody" to="BumperBody" method="_on_BumperBody_body_entered"]
[connection signal="body_exited" from="BumperBody" to="BumperBody" method="_on_BumperBody_body_exited"]
[connection signal="input_event" from="Area" to="BumperBody" method="_on_Area_input_event"]
